--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,88 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
     <title>JavaScript sheets</title>
 </head>
 <body>
 
 <div id="app" class="container">
 
+    <div class="excel">
+        <div class="excel__header">
+
+            <input type="text" class="input" value="New table"/>
+
+            <div>
+
+                <div class="button">
+                    <i class="material-icons">
+                        delete
+                    </i>
+                </div>
+
+                <div class="button">
+                    <i class="material-icons">
+                        exit_to_app
+                    </i>
+                </div>
+
+            </div>
+
+
+        </div>
+        <div class="excel__toolbar">
+
+            <div class="button">
+                <i class="material-icons">
+                    format_align_left
+                </i>
+            </div>
+
+            <div class="button">
+                <i class="material-icons">
+                    format_align_center
+                </i>
+            </div>
+
+            <div class="button">
+                <i class="material-icons">
+                    format_align_right
+                </i>
+            </div>
+
+            <div class="button">
+                <i class="material-icons">
+                    format_bold
+                </i>
+            </div>
+
+            <div class="button">
+                <i class="material-icons">
+                    format_italic
+                </i>
+            </div>
+
+            <div class="button">
+                <i class="material-icons">
+                    format_underline
+                </i>
+            </div>
+
+        </div>
+
+        <div class="excel__formula">
+
+            <div class="info">fx</div>
+
+            <div class="input" contenteditable spellcheck="false"></div>
+        </div>
+
+        <div class="excel__table">
+
+        </div>
+    </div>
 </div>
 
 </body>
